2008-05-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Html/HtmlSchemaService.cs,
	  MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Remove threaded
	  schema loading. Implement an alternative lazy schema loading
	  system.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet.addin.xml: Merged the extension points for project
	  and solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs,
	  MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs: Filter out runtime versions
	  that aren't 1.1 or 2.0.

2008-05-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/AspNetToolboxLoader.cs: Record the supported
	  runtime versions.
	* MonoDevelop.AspNet/AspNetToolboxNode.cs: Filter the item from the
	  text editor toolbox if the supported runtimes don't match the
	  current project.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs: The Deserialize event may not
	  be called in some file formats, so don't use it to control the
	  project loading.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProjectBinding.cs,
	  MonoDevelop.AspNet/AspNetAppProject.cs,
	  MonoDevelop.AspNet/CodeBehind.cs,
	  MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs,
	  MonoDevelop.AspNet/AspNetParserService.cs,