@@ -74,6 +74,7 @@ FILES =  \
 	MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs \
 	MonoDevelop.AspNet.Parser/LocatedParserException.cs \
 	MonoDevelop.AspNet.Parser/MemberListVisitor.cs \
+	MonoDevelop.AspNet.Parser/PageDirectiveVisitor.cs \
 	MonoDevelop.AspNet.Parser/PageInfo.cs \
 	MonoDevelop.AspNet.Parser/PageInfoVisitor.cs \
 	MonoDevelop.AspNet.Parser/Regexes.cs \
